<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>AirportWindow</class>
 <widget class="QMainWindow" name="AirportWindow">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>1290</width>
    <height>834</height>
   </rect>
  </property>
  <property name="font">
   <font>
    <pointsize>12</pointsize>
   </font>
  </property>
  <property name="windowTitle">
   <string>Аэропорты</string>
  </property>
  <widget class="QWidget" name="centralwidget">
   <widget class="QTableView" name="airport_table">
    <property name="geometry">
     <rect>
      <x>10</x>
      <y>210</y>
      <width>1270</width>
      <height>510</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <pointsize>12</pointsize>
     </font>
    </property>
    <property name="sortingEnabled">
     <bool>true</bool>
    </property>
    <attribute name="horizontalHeaderDefaultSectionSize">
     <number>250</number>
    </attribute>
   </widget>
   <widget class="QWidget" name="gridLayoutWidget">
    <property name="geometry">
     <rect>
      <x>10</x>
      <y>70</y>
      <width>1270</width>
      <height>129</height>
     </rect>
    </property>
    <layout class="QGridLayout" name="gridLayout">
     <item row="0" column="2">
      <widget class="QLabel" name="speed_label">
       <property name="minimumSize">
        <size>
         <width>248</width>
         <height>90</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
         <width>248</width>
         <height>90</height>
        </size>
       </property>
       <property name="text">
        <string>Скорость ветра</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignmentFlag::AlignCenter</set>
       </property>
      </widget>
     </item>
     <item row="0" column="4">
      <widget class="QLabel" name="temperature_label">
       <property name="minimumSize">
        <size>
         <width>248</width>
         <height>90</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
         <width>248</width>
         <height>90</height>
        </size>
       </property>
       <property name="text">
        <string>Температура воздуха</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignmentFlag::AlignCenter</set>
       </property>
      </widget>
     </item>
     <item row="0" column="3">
      <widget class="QLabel" name="direction_label">
       <property name="minimumSize">
        <size>
         <width>248</width>
         <height>90</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
         <width>248</width>
         <height>90</height>
        </size>
       </property>
       <property name="text">
        <string>Направление ветра</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignmentFlag::AlignCenter</set>
       </property>
      </widget>
     </item>
     <item row="0" column="1">
      <widget class="QLabel" name="rainfall_label">
       <property name="minimumSize">
        <size>
         <width>248</width>
         <height>90</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
         <width>248</width>
         <height>90</height>
        </size>
       </property>
       <property name="text">
        <string>Количество осадков</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignmentFlag::AlignCenter</set>
       </property>
      </widget>
     </item>
     <item row="0" column="0">
      <widget class="QLabel" name="name_label">
       <property name="minimumSize">
        <size>
         <width>248</width>
         <height>90</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
         <width>248</width>
         <height>90</height>
        </size>
       </property>
       <property name="text">
        <string>Название аэропорта</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignmentFlag::AlignCenter</set>
       </property>
      </widget>
     </item>
     <item row="1" column="0">
      <widget class="QLineEdit" name="name_edit">
       <property name="minimumSize">
        <size>
         <width>248</width>
         <height>30</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
         <width>248</width>
         <height>30</height>
        </size>
       </property>
       <property name="font">
        <font>
         <pointsize>12</pointsize>
        </font>
       </property>
       <property name="text">
        <string/>
       </property>
      </widget>
     </item>
     <item row="1" column="1">
      <widget class="QLineEdit" name="rainfall_edit">
       <property name="minimumSize">
        <size>
         <width>248</width>
         <height>30</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
         <width>248</width>
         <height>30</height>
        </size>
       </property>
       <property name="font">
        <font>
         <pointsize>12</pointsize>
        </font>
       </property>
       <property name="text">
        <string/>
       </property>
      </widget>
     </item>
     <item row="1" column="2">
      <widget class="QLineEdit" name="speed_edit">
       <property name="minimumSize">
        <size>
         <width>248</width>
         <height>30</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
         <width>248</width>
         <height>30</height>
        </size>
       </property>
       <property name="font">
        <font>
         <pointsize>12</pointsize>
        </font>
       </property>
       <property name="text">
        <string/>
       </property>
      </widget>
     </item>
     <item row="1" column="3">
      <widget class="QLineEdit" name="direction_edit">
       <property name="minimumSize">
        <size>
         <width>248</width>
         <height>30</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
         <width>248</width>
         <height>30</height>
        </size>
       </property>
       <property name="font">
        <font>
         <pointsize>12</pointsize>
        </font>
       </property>
       <property name="text">
        <string/>
       </property>
      </widget>
     </item>
     <item row="1" column="4">
      <widget class="QLineEdit" name="temperature_edit">
       <property name="minimumSize">
        <size>
         <width>248</width>
         <height>30</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
         <width>248</width>
         <height>30</height>
        </size>
       </property>
       <property name="font">
        <font>
         <pointsize>12</pointsize>
        </font>
       </property>
       <property name="text">
        <string/>
       </property>
      </widget>
     </item>
    </layout>
   </widget>
   <widget class="QLabel" name="title_label">
    <property name="geometry">
     <rect>
      <x>540</x>
      <y>20</y>
      <width>200</width>
      <height>30</height>
     </rect>
    </property>
    <property name="minimumSize">
     <size>
      <width>200</width>
      <height>30</height>
     </size>
    </property>
    <property name="maximumSize">
     <size>
      <width>200</width>
      <height>30</height>
     </size>
    </property>
    <property name="font">
     <font>
      <pointsize>14</pointsize>
      <bold>true</bold>
     </font>
    </property>
    <property name="text">
     <string>Аэропорты</string>
    </property>
    <property name="alignment">
     <set>Qt::AlignmentFlag::AlignCenter</set>
    </property>
   </widget>
   <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>10</x>
      <y>730</y>
      <width>1271</width>
      <height>32</height>
     </rect>
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
      <widget class="QPushButton" name="add_button">
       <property name="minimumSize">
        <size>
         <width>200</width>
         <height>30</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
         <width>200</width>
         <height>30</height>
        </size>
       </property>
       <property name="text">
        <string>Добавить</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="delete_button">
       <property name="minimumSize">
        <size>
         <width>200</width>
         <height>30</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
         <width>200</width>
         <height>30</height>
        </size>
       </property>
       <property name="text">
        <string>Удалить</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="change_button">
       <property name="minimumSize">
        <size>
         <width>200</width>
         <height>30</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
         <width>200</width>
         <height>30</height>
        </size>
       </property>
       <property name="text">
        <string>Изменить</string>
       </property>
      </widget>
     </item>
    </layout>
   </widget>
  </widget>
  <widget class="QMenuBar" name="menubar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>1290</width>
     <height>33</height>
    </rect>
   </property>
  </widget>
  <widget class="QStatusBar" name="statusbar"/>
 </widget>
 <resources/>
 <connections/>
</ui>
